upload all files

--- a/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
@@ -289,10 +289,10 @@
   <h2 id="intro-h" class="section" data-i18n-key="intro_h">ภาพรวมผลิตภัณฑ์</h2>
   <div class="content">
     <p data-i18n-key="intro_p1" data-i18n-html="true">
-      การชุบทองแดงด่างไร้ไซยาไนด์ (Non-Cyanide Alkaline Copper Plating) เป็นกระบวนการชุบโลหะด้วยไฟฟ้าที่มีความสำคัญอย่างยิ่งในอุตสาหกรรมการชุบผิวโลหะ มีวัตถุประสงค์หลักเพื่อทดแทนระบบด่างแบบดั้งเดิมที่ใช้ <strong>ไซยาไนด์ (Cyanide)</strong> ซึ่งเป็นสารเคมีอันตรายและมีพิษร้ายแรง การเปลี่ยนมาใช้ระบบนี้ช่วยลดความเสี่ยงต่อสุขภาพของผู้ปฏิบัติงานและลดผลกระทบต่อสิ่งแวดล้อมได้อย่างมีนัยสำคัญ
+      การชุบทองแดงด่างไร้ไซยาไนด์ (Non-Cyanide Alkaline Copper Plating) เป็นกระบวนการชุบโลหะด้วยไฟฟ้าที่มีความสำคัญอย่างยิ่งในอุตสาหกรรมการชุบผิวโลหะ มีวัตถุประสงค์หลักเพื่อทดแทนระบบด่างแบบดั้งเดิมที่ใช้ไซยาไนด์ (Cyanide) ซึ่งเป็นสารเคมีอันตรายและมีพิษร้ายแรง การเปลี่ยนมาใช้ระบบนี้ช่วยลดความเสี่ยงต่อสุขภาพของผู้ปฏิบัติงานและลดผลกระทบต่อสิ่งแวดล้อมได้อย่างมีนัยสำคัญ
     </p>
     <p data-i18n-key="intro_p2" data-i18n-html="true">
-      เนื่องจาก <strong>ทองแดงกรด (Acid Copper)</strong> จะทำปฏิกิริยากับผิวเหล็กและสังกะสีอย่างรุนแรง จนเกิดการกัดกร่อนและลอกง่าย การใช้ชั้น <strong>ทองแดงด่างไร้ไซยาไนด์</strong> เป็นชั้นรองพื้น/ชั้นกาว จึงช่วยป้องกันปฏิกิริยาดังกล่าว เพิ่มการยึดเกาะ และเปิดทางให้สามารถชุบด้วยทองแดงกรดในขั้นตอนถัดไปได้อย่างมีประสิทธิภาพ ส่งผลให้ผิวงานเรียบ สวยงาม และทนทาน
+      เนื่องจากทองแดงกรด (Acid Copper) จะทำปฏิกิริยากับผิวเหล็กและสังกะสีอย่างรุนแรง จนเกิดการกัดกร่อนและลอกง่าย การใช้ชั้นทองแดงด่างไร้ไซยาไนด์เป็นชั้นรองพื้น/ชั้นกาว จึงช่วยป้องกันปฏิกิริยาดังกล่าว เพิ่มการยึดเกาะ และเปิดทางให้สามารถชุบด้วยทองแดงกรดในขั้นตอนถัดไปได้อย่างมีประสิทธิภาพ ส่งผลให้ผิวงานเรียบ สวยงาม และทนทาน
     </p>
   </div>
 </section>
@@ -762,7 +762,7 @@
         toc_safety:"Safety",
 
       intro_h: "Overview",
-      intro_p1: "Non-cyanide alkaline copper plating is an electrolytic copper process designed to replace traditional cyanide alkaline copper. By eliminating <strong>cyanide</strong>—a highly toxic chemical—the process significantly reduces operator health risks and environmental impact.",
+      intro_p1: "Non-cyanide alkaline copper plating is an electrolytic copper process designed to replace traditional cyanide alkaline copper. By eliminating cyanide — a highly toxic chemical—the process significantly reduces operator health risks and environmental impact.",
       intro_p2: "Because acid copper reacts aggressively with steel and zinc—causing immersion displacement, corrosion and poor adhesion—a non-cyanide alkaline copper strike is used as an adherent undercoat/“glue” layer. It enables a subsequent acid-copper build, yielding a smoother, more durable decorative finish.",
 
         features_h:"Key features of the solution",
