upload all files

--- a/products/service/index.html
+++ b/products/service/index.html
@@ -332,7 +332,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Lab</span><span class="badge">Quality Control</span></div>
           <h3 data-i18n-key="sa_t">วิเคราะห์สารละลาย</h3>
-          <p data-i18n-key="sa_d">วิเคราะห์ตามวิธีผู้ผลิต/มาตรฐานสากล เพื่อติดตามความเข้มข้น สิ่งปนเปื้อน และคุณภาพสารละลายในไลน์ชุบ ตัวอย่างแนะนำ ≥ 200 cc/กรัม บรรจุภัณฑ์ปิดสนิท ป้องกันปนเปื้อนระหว่างขนส่ง</p>
+          <p data-i18n-key="sa_d">การวิเคราะห์คุณภาพสารละลายในไลน์ชุบ: เราให้บริการวิเคราะห์สารละลายตามวิธีของผู้ผลิตหรือมาตรฐานสากล เพื่อติดตามความเข้มข้นที่แม่นยำ ปริมาณสิ่งปนเปื้อน และคุณภาพโดยรวมของสารละลายอย่างสม่ำเสมอ โดยแนะนำตัวอย่าง ≥200 cc/กรัม ในบรรจุภัณฑ์ที่ปิดสนิทเพื่อป้องกันการปนเปื้อน</p>
         </div>
       </article>
 
@@ -501,14 +501,14 @@
         hero_tagline:"วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test) ทดสอบ Salt Spray และที่ปรึกษากระบวนการชุบ โดยทีมชำนาญการ 30+ ปี",
         sec_services:"บริการ",
         sec_services_lead:"มาตรฐานห้องแล็บและหน้างานที่แม่นยำ เชื่อถือได้",
-        sa_t:"วิเคราะห์สารละลาย",
-        sa_d:"วิเคราะห์ตามวิธีผู้ผลิต/มาตรฐานสากล เพื่อติดตามความเข้มข้น สิ่งปนเปื้อน และคุณภาพสารละลายในไลน์ชุบ ตัวอย่างแนะนำ ≥ 200 cc/กรัม บรรจุภัณฑ์ปิดสนิท ป้องกันปนเปื้อนระหว่างขนส่ง",
-        aa_t:"ตรวจโลหะปนเปื้อน (AA Test)",
-        aa_d:"ตรวจวัด Fe, Cu, Zn, Ni, Cr, Cd, Pb และธาตุอื่นตามต้องการด้วย Atomic Absorption ช่วยคุมคุณภาพอ่างชุบ ตัวอย่างควรปริมาตร ≥ 200 cc และภาชนะไม่ทำปฏิกิริยา",
-        salt_t:"ทดสอบสเปรย์ซอลต์ (Salt Spray)",
-        salt_d:"ประเมินความทนการกัดกร่อนของผิวเคลือบ/ชุบ ด้วยเครื่องมาตรฐาน ช่วยยืนยันคุณภาพก่อนผลิตจริง ทีมงานแนะนำการเตรียมชิ้นทดสอบและเงื่อนไขตามสเปกได้",
-        consult_t:"ที่ปรึกษากระบวนการชุบ",
-        consult_d:"แก้ปัญหาสีไม่สม่ำเสมอ ผิวสาก เกาะยึดไม่ดี ตะกอน ฯลฯ พร้อมปรับไฟ/อุณหภูมิ/ความเข้มข้น ออกแบบสูตรและมาตรฐานเพื่อลดของเสีย เพิ่มเสถียรภาพการผลิต",
+        sa_t:"การวิเคราะห์คุณภาพสารละลายในไลน์ชุบ",
+        sa_d:"เราให้บริการวิเคราะห์สารละลายตามวิธีของผู้ผลิตหรือมาตรฐานสากล เพื่อติดตามความเข้มข้นที่แม่นยำ ปริมาณสิ่งปนเปื้อน และคุณภาพโดยรวมของสารละลายอย่างสม่ำเสมอ โดยแนะนำตัวอย่าง ≥200 cc/กรัม ในบรรจุภัณฑ์ที่ปิดสนิทเพื่อป้องกันการปนเปื้อน",
+        aa_t:"การตรวจวัดโลหะหนักด้วย Atomic Absorption",
+        aa_d:"ตรวจวัดธาตุสำคัญ เช่น Fe, Cu, Zn, Ni, Cr, Cd, Pb และธาตุอื่น ๆ ตามต้องการด้วยเทคนิค AA ที่มีความแม่นยำสูง เพื่อช่วยควบคุมและรักษาเสถียรภาพของอ่างชุบให้ได้คุณภาพสูงสุด โดยตัวอย่างควรมีปริมาตร ≥200 cc และใช้ภาชนะที่ไม่ทำปฏิกิริยา",
+        salt_t:"การทดสอบสเปรย์ซอลต์ (Salt Spray Test)",
+        salt_d:"ประเมินความทนทานต่อการกัดกร่อนของผิวเคลือบ/ผิวชุบด้วยเครื่องมือมาตรฐาน เพื่อยืนยันคุณภาพชิ้นงานก่อนการผลิตจริง ซึ่งทีมงานผู้เชี่ยวชาญของเราพร้อมให้คำแนะนำในการเตรียมชิ้นทดสอบและกำหนดเงื่อนไขการทดสอบตามสเปกของท่าน",
+        consult_t:"การแก้ไขปัญหาและเพิ่มเสถียรภาพการผลิต",
+        consult_d:"ให้คำปรึกษาและแก้ปัญหาคุณภาพ เช่น สีไม่สม่ำเสมอ ผิวสาก การเกาะยึดไม่ดี หรือตะกอน พร้อมปรับตั้งค่ากระแสไฟ อุณหภูมิ และความเข้มข้นที่เหมาะสม รวมถึงออกแบบสูตรและมาตรฐานการผลิตเพื่อลดของเสียและเพิ่มประสิทธิภาพการทำงาน",
         footer_products:"หมวดผลิตภัณฑ์",
         footer_contact:"ติดต่อเรา",
         footer_copy:"© 2025 Baume Chemical. All rights reserved."
@@ -525,14 +525,14 @@
         hero_tagline:"Solution analysis, AA metal test, salt spray testing, and plating process consulting by a team with 30+ years’ experience.",
         sec_services:"Services",
         sec_services_lead:"Accurate, laboratory-grade and on-site support you can rely on.",
-        sa_t:"Chemical Solution Analysis",
-        sa_d:"Analyze per supplier methods/standards to track concentration, contaminants, and bath quality. Recommended sample ≥ 200 cc/g in a tightly sealed, clean container.",
-        aa_t:"Metal Analysis (AA Test)",
-        aa_d:"Detect Fe, Cu, Zn, Ni, Cr, Cd, Pb and more via Atomic Absorption to control bath quality. Provide ≥ 200 cc; use non-reactive, leak-proof bottles.",
+        sa_t:"Plating Solution Quality Analysis",
+        sa_d:"We conduct precise plating bath analysis following manufacturer methods or international standards to monitor concentration, impurities, and overall solution quality consistently. Recommended sample volume is ≥200 cc/gram in a sealed container to prevent contamination during transit.",
+        aa_t:"Heavy Metal Analysis by Atomic Absorption",
+        aa_d:"Accurately measure critical elements like Fe, Cu, Zn, Ni, Cr, Cd, Pb and others upon request using Atomic Absorption (AA) to maintain strict control over bath quality. Samples should be ≥200 cc and collected in non-reactive containers.",
         salt_t:"Salt Spray Corrosion Test",
-        salt_d:"Standardized corrosion evaluation for coated/plated parts to confirm durability before mass production. We advise on specimen prep and test conditions.",
+        salt_d:"Evaluate the corrosion resistance of your coatings or plating using standardized Salt Spray (Salt Fog) testing equipment to confirm quality before full-scale production. Our team can advise on test panel preparation and testing conditions tailored to your specifications.",
         consult_t:"Plating Process Consultation",
-        consult_d:"Troubleshoot color variation, roughness, poor adhesion, sludge, etc. Optimize current/temperature/concentration, formulate additives, and standardize processes to reduce rejects.",
+        consult_d:"We resolve common quality issues such as inconsistent color, rough surfaces, poor adhesion, or sludge formation, and provide recommendations to adjust current, temperature, and concentration. We also design formulas and standards to reduce waste and enhance production stability.",
         footer_products:"Products",
         footer_contact:"Contact Us",
         footer_copy:"© 2025 Baume Chemical. All rights reserved."
