upload all files

--- a/products/service/index.html
+++ b/products/service/index.html
@@ -500,7 +500,7 @@
         hero_title:"บริการลูกค้า",
         hero_tagline:"วิเคราะห์สารละลาย ตรวจโลหะปนเปื้อน (AA Test) ทดสอบ Salt Spray และที่ปรึกษากระบวนการชุบ โดยทีมชำนาญการ 30+ ปี",
         sec_services:"บริการ",
-        sec_services_lead:"มาตรฐานห้องแล็บและหน้างานที่แม่นยำ เชื่อถือได้",
+        sec_services_lead:"ให้บริการวิเคราะห์สารละลายไลน์ชุบตามมาตรฐานสากล ด้วยห้องแล็บที่แม่นยำและเชื่อถือได้ พร้อมทีมงานแก้ปัญหาและเพิ่มเสถียรภาพการผลิตให้แก่ไลน์ของคุณ",
         sa_t:"การวิเคราะห์คุณภาพสารละลายในไลน์ชุบ",
         sa_d:"เราให้บริการวิเคราะห์สารละลายตามวิธีของผู้ผลิตหรือมาตรฐานสากล เพื่อติดตามความเข้มข้นที่แม่นยำ ปริมาณสิ่งปนเปื้อน และคุณภาพโดยรวมของสารละลายอย่างสม่ำเสมอ โดยแนะนำตัวอย่าง ≥200 cc/กรัม ในบรรจุภัณฑ์ที่ปิดสนิทเพื่อป้องกันการปนเปื้อน",
         aa_t:"การตรวจวัดโลหะหนักด้วย Atomic Absorption",
@@ -524,7 +524,7 @@
         hero_title:"Customer Service",
         hero_tagline:"Solution analysis, AA metal test, salt spray testing, and plating process consulting by a team with 30+ years’ experience.",
         sec_services:"Services",
-        sec_services_lead:"Accurate, laboratory-grade and on-site support you can rely on.",
+        sec_services_lead:"Trust our accurate and reliable lab for plating solution analysis that adheres strictly to international standards. We offer expert troubleshooting and process stabilization services for your production line.",
         sa_t:"Plating Solution Quality Analysis",
         sa_d:"We conduct precise plating bath analysis following manufacturer methods or international standards to monitor concentration, impurities, and overall solution quality consistently. Recommended sample volume is ≥200 cc/gram in a sealed container to prevent contamination during transit.",
         aa_t:"Heavy Metal Analysis by Atomic Absorption",
