upload all files

--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">คู่มือ Brass Cyanide — น้ำยาชุบทองเหลืองไซยาไนด์ | Baume Chemical Blog</title>
+  <title data-i18n-key="title">Brass Cyanide — น้ำยาชุบทองเหลืองไซยาไนด์ | Baume Chemical Blog</title>
 
   <!-- SEO base -->
   <meta name="description" content="Brass Cyanide น้ำยาชุบทองเหลืองไซยาไนด์: ภาพรวม กระบวนการ สัดส่วนผสม พารามิเตอร์เดินบ่อ คุณสมบัติ จุดเด่น 6 ข้อ อุปกรณ์ที่ใช้ แนวทางควบคุม/ความปลอดภัย พร้อม i18n ครบทุกบรรทัด">
@@ -19,7 +19,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="คู่มือ Brass Cyanide — น้ำยาชุบทองเหลืองไซยาไนด์">
+  <meta property="og:title" content="Brass Cyanide — น้ำยาชุบทองเหลืองไซยาไนด์">
   <meta property="og:description" content="จุดประสงค์การชุบ องค์ประกอบสารเคมี สูตร Make-up พารามิเตอร์เดินงาน คุณสมบัติ/ความปลอดภัย และไกด์แก้ปัญหา">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrass/index.html">
   <meta property="og:image" content="https://i.imgur.com/ikv1kfr.jpeg">
@@ -548,7 +548,7 @@
   <script>
     const I18N = {
       th: {
-        title:"Brass Cyanide — คู่มือการชุบทองเหลืองไซยาไนด์ | Baume Chemical Blog",
+        title:"Brass Cyanide — การชุบทองเหลืองไซยาไนด์ | Baume Chemical Blog",
 
         brand_name:"Baume Chemical", brand_name_ft:"Baume Chemical",
         lang_th:"ไทย", lang_en:"EN",
