--- a/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html
@@ -6,7 +6,7 @@
   <title data-i18n-key="title">Brass (Non-Cyanide) — น้ำยาชุบทองเหลืองไร้ไซยาไนด์ | Baume Chemical Blog</title>
 
   <!-- SEO base -->
-  <meta name="description" content="คู่มือการชุบทองเหลืองแบบไม่ใช้ไซยาไนด์: สารเชิงซ้อนที่ปลอดภัยกว่า สัดส่วนการผสม สภาวะเดินงาน การบำรุงรักษา การแก้ปัญหา และการ์ดจุดเด่น 6 ข้อ">
+  <meta name="description" content="การชุบทองเหลืองแบบไม่ใช้ไซยาไนด์: สารเชิงซ้อนที่ปลอดภัยกว่า สัดส่วนการผสม สภาวะเดินงาน การบำรุงรักษา การแก้ปัญหา และการ์ดจุดเด่น 6 ข้อ">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/troubleshootingbrassnoncyanide/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -430,7 +430,7 @@
       <li data-i18n-key="process_maint_1">ควบคุม pH ให้อยู่ในช่วง 10–13 โดยมีค่าเป้าหมาย 12 และปรับด้วยโพแทสเซียมไฮดรอกไซด์เมื่อค่าลดลง</li>
       <li data-i18n-key="process_maint_2">ควบคุมองศาเบาเม่ แร็คประมาณ 17 และบาร์เรลประมาณ 15 อยู่ในช่วง 14–20</li>
       <li data-i18n-key="process_maint_3">รักษาอุณหภูมิ 50–60 °C และเปิดระบบกรองต่อเนื่อง</li>
-      <li data-i18n-key="process_maint_4">หากโทนสีหรือความเงาเปลี่ยน ให้ใช้ตัวปรับสีหรือปรับความเงาตามคู่มือผลิตภัณฑ์</li>
+      <li data-i18n-key="process_maint_4">หากโทนสีหรือความเงาเปลี่ยน ให้ใช้ตัวปรับสีหรือปรับความเงาตามคู่มือ</li>
       <li data-i18n-key="process_maint_5">เมื่อมีการปนเปื้อนอินทรีย์ ให้บำบัดด้วยผงคาร์บอน ทำดัมมี่ชุบ แล้วกรองให้น้ำยาใสก่อนเดินงานต่อ</li>
     </ul>
   </div>
@@ -539,7 +539,7 @@
   <script>
     const I18N = {
       th: {
-        title:"Brass (Non-Cyanide) — คู่มือระบบชุบทองเหลืองไร้ไซยาไนด์ | Baume Chemical Blog",
+        title:"Brass (Non-Cyanide) — ระบบชุบทองเหลืองไร้ไซยาไนด์ | Baume Chemical Blog",
 
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← กลับเมนูหลัก",
@@ -626,7 +626,7 @@
       process_maint_1: "ควบคุม pH ให้อยู่ในช่วง 10–13 โดยมีค่าเป้าหมาย 12 และปรับด้วยโพแทสเซียมไฮดรอกไซด์เมื่อค่าลดลง",
       process_maint_2: "ควบคุมองศาเบาเม่ แร็คประมาณ 17 และบาร์เรลประมาณ 15 อยู่ในช่วง 14–20",
       process_maint_3: "รักษาอุณหภูมิ 50–60 °C และเปิดระบบกรองต่อเนื่อง",
-      process_maint_4: "หากโทนสีหรือความเงาเปลี่ยน ให้ใช้ตัวปรับสีหรือปรับความเงาตามคู่มือผลิตภัณฑ์",
+      process_maint_4: "หากโทนสีหรือความเงาเปลี่ยน ให้ใช้ตัวปรับสีหรือปรับความเงาตามคู่มือ",
       process_maint_5: "เมื่อมีการปนเปื้อนอินทรีย์ ให้บำบัดด้วยผงคาร์บอน ทำดัมมี่ชุบ แล้วกรองให้น้ำยาใสก่อนเดินงานต่อ",
 
       process_trouble_lead: "แนวทางแก้ปัญหาเบื้องต้น",
