--- a/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
@@ -6,7 +6,7 @@
   <title data-i18n-key="title">Alkaline Copper Strike — ชั้นรองพื้นทองแดง | Baume Chemical</title>
 
   <!-- SEO base -->
-  <meta name="description" content="คู่มือ Alkaline Copper (Strike) ชั้นรองพื้น/ชั้นกาวก่อน Acid Copper: ทำไมต้องใช้ด่าง, คุณสมบัติ, ความแตกต่าง Acid vs Alkaline, ฟีเจอร์ 6 ข้อ, สูตรเดินบ่อ และพารามิเตอร์หลัก">
+  <meta name="description" content="Alkaline Copper (Strike) ชั้นรองพื้น/ชั้นกาวก่อน Acid Copper: ทำไมต้องใช้ด่าง, คุณสมบัติ, ความแตกต่าง Acid vs Alkaline, ฟีเจอร์ 6 ข้อ, สูตรเดินบ่อ และพารามิเตอร์หลัก">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copper/alkaline-strike.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
