--- a/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">Copperlume 220 — Non-Cyanide Alkaline Copper | คู่มือใช้งาน</title>
+  <title data-i18n-key="title">Copperlume 220 — Non-Cyanide Alkaline Copper</title>
 
   <!-- SEO base -->
   <meta name="description" content="การชุบทองแดงด่างไร้ไซยาไนด์: หลักการ ข้อดีต่อ EHS สูตร Make-up ช่วงค่าควบคุม พารามิเตอร์เดินงาน แนวทางแก้ปัญหา พร้อม Feature cards 6 ข้อ">
@@ -628,7 +628,7 @@
   <script>
     const I18N = {
       th: {
-        title:"Copperlume 220 — Non-Cyanide Alkaline Copper | คู่มือใช้งาน",
+        title:"Copperlume 220 — Non-Cyanide Alkaline Copper",
         back_home:"← กลับเมนูหลัก",
         hero_title:"Copperlume 220 — Non-Cyanide Alkaline Copper",
         hero_tagline:"ชั้นรองพื้นทองแดงปลอดไซยาไนด์ ยึดเกาะดี เข้าซอกสูง คุมงานง่าย เหมาะเหล็ก/ซิงค์ไดคาสต์ พร้อมสูตร & พารามิเตอร์ครบ",
