--- a/products/platingcoating/cyanide-free-white-bronze/index.html
+++ b/products/platingcoating/cyanide-free-white-bronze/index.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="317M — Cyanide-free White Bronze">
-  <meta property="og:description" content="คู่มือไวท์บรอนซ์ปลอดไซยาไนด์: หลักการ จุดเด่น make-up พารามิเตอร์ อุปกรณ์ และความปลอดภัย">
+  <meta property="og:description" content="ไวท์บรอนซ์ปลอดไซยาไนด์: หลักการ จุดเด่น make-up พารามิเตอร์ อุปกรณ์ และความปลอดภัย">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/cyanide-free-white-bronze/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/image0-22a7d2870f1bc4f83.jpeg">
   <meta name="twitter:card" content="summary_large_image">
