--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="EPA 2020 — แลคเกอร์ไฟฟ้าอะคริลิค (Acrylic E-coat)">
-  <meta property="og:description" content="คู่มือ E-coat: หลักการ EDP, make-up, เงื่อนไขเดินงาน, อุปกรณ์ และความปลอดภัย">
+  <meta property="og:description" content="E-coat: หลักการ EDP, make-up, เงื่อนไขเดินงาน, อุปกรณ์ และความปลอดภัย">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html">
   <meta property="og:image" content="https://i.imgur.com/qLv2KRt.jpeg">
   <meta name="twitter:card" content="summary_large_image">
@@ -515,7 +515,7 @@
   <div class="content">
     <ul>
       <li data-i18n-key="add_flow">
-        โฟลว์แอดดิทีฟ: รักษาสมดุลส่วนผสม เป้าหมายรวม 3–4 เปอร์เซ็นต์ ของระบบตามคู่มือ
+        โฟลว์แอดดิทีฟ: รักษาสมดุลส่วนผสม เป้าหมายรวม 3–4 เปอร์เซ็นต์
       </li>
       <li data-i18n-key="add_stab">
         สเตบิไลเซอร์: ใช้เป็นครั้งคราวเพื่อคุม pH และ MEQ ปกติเติม 0.2–0.3 ซีซีต่อลิตรเมื่อจำเป็น
@@ -686,7 +686,7 @@
       equip_oven: "ตู้อบงาน: หลังจากชิ้นงานถูกเคลือบด้วยแลคเกอร์แล้ว จะต้องนำไป อบในตู้อบ เพื่อให้ฟิล์มแลคเกอร์แข็งตัวและเกาะติดกับผิวชิ้นงานอย่างสมบูรณ์. การอบนี้เป็นขั้นตอนสุดท้ายที่ทำให้ฟิล์มมีความทนทานต่อการขีดข่วนและการสึกหรอ",
 
       add_h: "สารเคมีที่ใช้ในการปรับปรุง",
-      add_flow: "Flow additive: รักษาสมดุลส่วนผสม เป้าหมายรวม 3–4 เปอร์เซ็นต์ ของระบบตามคู่มือ",
+      add_flow: "Flow additive: รักษาสมดุลส่วนผสม เป้าหมายรวม 3–4 เปอร์เซ็นต์",
       add_stab: "Stabilizer: ใช้เป็นครั้งคราวเพื่อคุม pH และ MEQ ปกติเติม 0.2–0.3 ซีซีต่อลิตรเมื่อจำเป็น",
 
         ft_addr_1:"📍 31 ซอย เพชรเกษม 48 แยก 24 แขวง บางแวก",
