--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" data-i18n-key="og_title" content="LT 3405 — โพลียูรีเทน E-coat (PU EDP)">
-  <meta property="og:description" data-i18n-key="og_desc" content="คู่มือ PU E-coat: หลักการ EDP, make-up, เงื่อนไขเดินงาน, อุปกรณ์ และความปลอดภัย">
+  <meta property="og:description" data-i18n-key="og_desc" content="PU E-coat: หลักการ EDP, make-up, เงื่อนไขเดินงาน, อุปกรณ์ และความปลอดภัย">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html">
   <meta property="og:image" content="https://i.imgur.com/c7PJfsW.jpeg">
   <meta name="twitter:card" content="summary_large_image">
