--- a/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
+++ b/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
@@ -6,7 +6,7 @@
   <title data-i18n-key="title">การชุบโครเมียม & ฮาร์ดโครม — แนวทางใช้งาน | Baume Chemical Blog</title>
 
   <!-- SEO base -->
-  <meta name="description" content="คู่มือการชุบโครเมียมตกแต่งและฮาร์ดโครม: ความแตกต่างหลัก พารามิเตอร์การเดินบ่อ อุปกรณ์ การควบคุมบ่อ และการใช้ Decorex Conducting Salt เร่งการติดในบริเวณกระแสต่ำ (LCD).">
+  <meta name="description" content="การชุบโครเมียมตกแต่งและฮาร์ดโครม: ความแตกต่างหลัก พารามิเตอร์การเดินบ่อ อุปกรณ์ การควบคุมบ่อ และการใช้ Decorex Conducting Salt เร่งการติดในบริเวณกระแสต่ำ (LCD).">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
