--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">คู่มือ BASn 4140 — น้ำยาชุบดีบุกเงา | Baume Chemical Blog</title>
+  <title data-i18n-key="title">BASn 4140 — น้ำยาชุบดีบุกเงา | Baume Chemical Blog</title>
 
   <!-- SEO base -->
   <meta name="description" content="BASn 4140 น้ำยาชุบดีบุกเงาคุณภาพสูง: สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้แอโนดดีบุกบริสุทธิ์ 99.9%">
@@ -19,7 +19,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="คู่มือ BASn 4140 — น้ำยาชุบดีบุกเงา">
+  <meta property="og:title" content="BASn 4140 — น้ำยาชุบดีบุกเงา">
   <meta property="og:description" content="สัดส่วนการผสม ขั้นตอนชุบ พารามิเตอร์ อุปกรณ์ และเหตุผลที่ใช้ Tin Anode 99.9%">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/tinplating/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg">
