--- a/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
@@ -30,7 +30,7 @@
     "@context": "https://schema.org/",
     "@type": "Product",
     "name": "Brightener Zinc 111B — Cyanide Zinc Plating",
-    "description": "คู่มือการชุบซิงค์ไซยาไนด์ พร้อมสัดส่วนบ่อ การเตรียมบ่อ บำรุงรักษา และความปลอดภัย",
+    "description": "การชุบซิงค์ไซยาไนด์ พร้อมสัดส่วนบ่อ การเตรียมบ่อ บำรุงรักษา และความปลอดภัย",
     "image": "https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg",
     "brand": {"@type": "Brand","name": "Baume Chemical"},
     "category": "Zinc Plating",
