--- a/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n-key="title">Cyanide-free Zinc Plating — คู่มือเต็ม | Baume Chemical</title>
+  <title data-i18n-key="title">Cyanide-free Zinc Plating — ชุบซิงค์หรือสังกะสีแบบไม่ใช้ไซยาไนด์ | Baume Chemical</title>
 
   <!-- SEO base -->
-  <meta name="description" content="คู่มือชุบซิงค์หรือสังกะสีแบบไม่ใช้ไซยาไนด์ (Cyanide-free): เปรียบเทียบกรด/ด่าง, สูตรเดินบ่อ, เงื่อนไขการทำงาน, ฟีเจอร์ 6 ข้อ, การเติมบ่อ, การแก้ปัญหา และความปลอดภัย">
+  <meta name="description" content="ชุบซิงค์หรือสังกะสีแบบไม่ใช้ไซยาไนด์ (Cyanide-free): เปรียบเทียบกรด/ด่าง, สูตรเดินบ่อ, เงื่อนไขการทำงาน, ฟีเจอร์ 6 ข้อ, การเติมบ่อ, การแก้ปัญหา และความปลอดภัย">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
@@ -19,8 +19,8 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="Cyanide-free Zinc Plating — คู่มือเต็ม">
-  <meta property="og:description" content="สารละลายกรด/ด่าง, ฟีเจอร์ 6 ข้อ, สูตร Make-up, พารามิเตอร์, และแนวทางแก้ปัญหา">
+  <meta property="og:title" content="Cyanide-free Zinc Plating — ชุบซิงค์หรือสังกะสีแบบไม่ใช้ไซยาไนด์">
+  <meta property="og:description" content="สารละลายกรด/ด่าง, สูตร Make-up, พารามิเตอร์, และแนวทางแก้ปัญหา">
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail-7.jpg">
   <meta name="twitter:card" content="summary_large_image">
@@ -517,7 +517,7 @@
   <script>
     const I18N = {
       th: {
-        title:"ชุบซิงค์แบบไม่ใช้ไซยาไนด์ — คู่มือเต็ม | Baume Chemical",
+        title:"ชุบซิงค์แบบไม่ใช้ไซยาไนด์ — Cyanide-free Zinc Plating | Baume Chemical",
         back_home:"← กลับเมนูหลัก",
         hero_title:"ชุบซิงค์แบบไม่ใช้ไซยาไนด์ (Cyanide-free Zinc Plating)",
         hero_tagline:"ปลอดภัยต่อผู้ปฏิบัติงาน/สิ่งแวดล้อม พร้อมสรุปประเภทกรด–ด่าง สูตรเดินบ่อ พารามิเตอร์ ฟีเจอร์ 6 ข้อ การเติมบ่อ และแนวทางแก้ปัญหา",
