--- a/products/polishing/aluminum-electropolishing-solution.html
+++ b/products/polishing/aluminum-electropolishing-solution.html
@@ -19,7 +19,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="คู่มือ EP 8539 — กัดเงาอะลูมิเนียมด้วยไฟฟ้า">
+  <meta property="og:title" content="EP 8539 — กัดเงาอะลูมิเนียมด้วยไฟฟ้า">
   <meta property="og:description" content="สเปก อัตราส่วน ขั้นตอน และอุปกรณ์สำหรับ Electropolishing อะลูมิเนียมอย่างมืออาชีพ">
   <meta property="og:url" content="https://www.baumechemical.com/products/polishing/aluminum-electropolishing-solution.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/image0-5.jpeg">
