--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title data-i18n-key="title">Nickel Plating — คู่มือปฏิบัติ | Baume Chemical Blog</title>
+  <title data-i18n-key="title">Nickel Plating — ชุบนิกเกิลเงา | Baume Chemical Blog</title>
 
   <!-- SEO base -->
-  <meta name="description" content="คู่มือการชุบนิกเกิล: ภาพรวม หลักการ คุณสมบัติ จุดเด่น การเตรียมบ่อ ขั้นตอนการชุบ สภาพการทำงาน และอุปกรณ์ที่จำเป็น พร้อมฟีเจอร์การ์ดแบบ 3×2." />
+  <meta name="description" content="การชุบนิกเกิล: ภาพรวม หลักการ คุณสมบัติ จุดเด่น การเตรียมบ่อ ขั้นตอนการชุบ สภาพการทำงาน และอุปกรณ์ที่จำเป็น" />
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
@@ -19,7 +19,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article" />
   <meta property="og:site_name" content="Baume Chemical" />
-  <meta property="og:title" content="Nickel Plating — คู่มือปฏิบัติ" />
+  <meta property="og:title" content="Nickel Plating — ชุบนิกเกิลเงา" />
   <meta property="og:description" content="ภาพรวม หลักการ จุดเด่น สูตร Watt’s การเตรียมบ่อ ขั้นตอนชุบ และสภาพการทำงาน" />
   <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html" />
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg" />
@@ -29,7 +29,7 @@
   {
     "@context":"https://schema.org/",
     "@type":"TechArticle",
-    "headline":"Nickel Plating — คู่มือปฏิบัติ",
+    "headline":"Nickel Plating — ชุบนิกเกิลเงา",
     "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg",
     "author":{"@type":"Organization","name":"Baume Chemical"},
     "inLanguage":"th",
